--- a/WallE_Visual/WorldViewer/WorldViewer.resx
+++ b/WallE_Visual/WorldViewer/WorldViewer.resx
@@ -117,105 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="Box_Large_Blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\resource\img\WallEObjects\Box_Large_Blue.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Box_Large_Green" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\resource\img\WallEObjects\Box_Large_Green.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Box_Large_Red" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\resource\img\WallEObjects\Box_Large_Red.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Box_Large_Yellow" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\resource\img\WallEObjects\Box_Large_Yellow.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Box_Medium_Blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\resource\img\WallEObjects\Box_Medium_Blue.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Box_Medium_Green" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\resource\img\WallEObjects\Box_Medium_Green.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Box_Medium_Red" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\resource\img\WallEObjects\Box_Medium_Red.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Box_Medium_Yellow" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\resource\img\WallEObjects\Box_Medium_Yellow.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Box_Small_Blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\resource\img\WallEObjects\Box_Small_Blue.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Box_Small_Green" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\resource\img\WallEObjects\Box_Small_Green.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Box_Small_Red" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\resource\img\WallEObjects\Box_Small_Red.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Box_Small_Yellow" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\resource\img\WallEObjects\Box_Small_Yellow.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="conMenuOptions.TrayLocation" type="System.Drawing.Point, System.Drawing">
+  <metadata name="conMenuOptions.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
-  </data>
-  <data name="Plant_Medium_Blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\resource\img\WallEObjects\Plant_Medium_Blue.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Plant_Medium_Green" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\resource\img\WallEObjects\Plant_Medium_Green.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Plant_Medium_Red" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\resource\img\WallEObjects\Plant_Medium_Red.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Robot_Blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\resource\img\WallEObjects\Robot_Blue.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Robot_Green" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Robot_Green.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Robot_Red" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\resource\img\WallEObjects\Robot_Red.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Robot_Yellow" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Robot_Yellow.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Sphere_Large_Blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\resource\img\WallEObjects\Sphere_Large_Blue.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Sphere_Large_Green" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\resource\img\WallEObjects\Sphere_Large_Green.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Sphere_Large_Red" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\resource\img\WallEObjects\Sphere_Large_Red.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Sphere_Large_Yellow" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\resource\img\WallEObjects\Sphere_Large_Yellow.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Sphere_Medium_Blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\resource\img\WallEObjects\Sphere_Medium_Blue.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Sphere_Medium_Green" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\resource\img\WallEObjects\Sphere_Medium_Green.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Sphere_Medium_Red" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\resource\img\WallEObjects\Sphere_Medium_Red.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Sphere_Medium_Yellow" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\resource\img\WallEObjects\Sphere_Medium_Yellow.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Sphere_Small_Blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\resource\img\WallEObjects\Sphere_Small_Blue.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Sphere_Small_Green" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\resource\img\WallEObjects\Sphere_Small_Green.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Sphere_Small_Red" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\resource\img\WallEObjects\Sphere_Small_Red.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Sphere_Small_Yellow" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\resource\img\WallEObjects\Sphere_Small_Yellow.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="toolTipPosition.TrayLocation" type="System.Drawing.Point, System.Drawing">
+  </metadata>
+  <metadata name="toolTipPosition.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>192, 17</value>
-  </data>
+  </metadata>
 </root>
